@@ -4,6 +4,11 @@
 
 - v1.0.1061                                 -
 ---------------------------------------------
+- 2021-01-08                                -
+---------------------------------------------
+.: WSM: Task: Add completed date for invoice (WSM-283)
+
+---------------------------------------------
 - 2021-01-07                                -
 ---------------------------------------------
 .: WSM: BugFix: Upload multiple banners slow issue (WSM-275)
